# osynic_midi

./: Cargo.toml  README.md  README_EN.md  test-cli.ps1
configs/: midi_config.json  midi_config_10ka.json  midi_config_10kab.json  midi_config_10ko.json  midi_config_7km.json  midi_config_7km4.json  midi_config_8ka.json  midi_config_8kam.json  midi_config_8kap.json  midi_config_8kar.json  midi_config_c_145.json  midi_config_c_l_drum2.json  midi_config_c_r_drum1.json
docs/: 01-getting-started.md  02-cli-guide.md  03-library-api.md  04-architecture.md  05-configuration-guide.md  06-changelog.md  07-troubleshooting.md
docs/aicg/: ARCHITECTURE.md  CLI_USAGE.md  DEVELOPMENT_COMPLETE.md  INTERACTIVE_MENU_UPDATE.md  LIBRARY_API.md  MIDI_DEVICE_FIX.md  MIDI_MAPPING_FIXED.md  REFACTORING_SUMMARY.md
examples/: ajm.rs  cli.rs  lib_usage.rs
src/: core.rs  create_config.rs  discovery.rs  interactive.rs  lib.rs  main.rs  mapper.rs
